--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -3,19 +3,22 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
-
+{% block page_header %}
+<div class="header-container"></div>
+{% endblock %}
 {% block inner_content %}
-<h2 class="logo-font my-5">{% trans "Sign Out" %}</h2>
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<div class="wrapper container">
+    <h2 class="my-5">{% trans "Sign Out" %}</h2>
+    <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
-<form class="mb-5" method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
+    <form class="mb-5" method="post" action="{% url 'account_logout' %}">
+        {% csrf_token %}
+        {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+        <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
+        <button type="submit">{% trans 'Sign Out' %}</button>
+    </form>
+</div>
 
 {% endblock %}
