--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -3,9 +3,12 @@
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block inner_content %}
-<div class="wrapper">
+{% block page_header %}
+<div class="header-container"></div>
+{% endblock %}
 
+{% block inner_content %}
+<div class="container wrapper">
     <h2 class=" my-5">{% trans "Change Password" %}</h2>
     <p>{% trans 'Your password is now changed.' %}</p>
 </div>
