--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -7,9 +7,7 @@
 {% endblock page_header %}
 
 {% block content %}
-<div class="overlay"></div>
-<div class="wrapper">
-    <div class="container">
+    <div class="container wrapper">
         <div class="row mt-5">
             <div class="col">
                 <h2 class="mb-4">My Profile</h2>
@@ -28,7 +26,6 @@
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
 
 {% block postjs %}
