--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="header-container">
+    <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-6">
                 <div class="allauth-form-inner-content">
