--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -4,8 +4,13 @@
 
 {% block head_title %}{% trans "Account" %}{% endblock %}
 
+{% block page_header %}
+<div class="header-container"></div>
+{% endblock %}
+
 {% block inner_content %}
-<div class="wrapper">
+
+<div class="container wrapper mb-5 mb-md-0">
     <h2 class="my-5">{% trans "E-mail Addresses" %}</h2>
     {% if user.emailaddress_set.all %}
     <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
@@ -33,7 +38,7 @@
 
             <div class="buttonHolder my-5">
                 <button class="secondaryAction" type="submit" name="action_primary">{% trans 'Make Primary' %}</button>
-                <button class="secondaryAction" type="submit" name="action_send">{% trans 'Re-send Verification' %}</button>
+                <button class="secondaryAction" type="submit" name="action_send">{% trans 'Verify' %}</button>
                 <button class="primaryAction" type="submit" name="action_remove">{% trans 'Remove' %}</button>
             </div>
 
