--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -4,10 +4,12 @@
 {% load account %}
 
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
-
+{% block page_header %}
+<div class="header-container"></div>
+{% endblock %}
 
 {% block inner_content %}
-<div class="wrapper">
+<div class="container wrapper">
     <h2 class="my-5">{% trans "Confirm E-mail Address" %}</h2>
 
     {% if confirmation %}
