--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -4,11 +4,13 @@
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block inner_content %}
-<div class="wrapper">
-    <h2 class="my-5">{% trans "Change Password" %}</h2>
-    <hr>
+{% block page_header %}
+<div class="header-container"></div>
+{% endblock %}
 
+{% block inner_content %}
+<div class="container wrapper">
+    <h2 class="my-5">{% trans "Change Password" %}</h2>
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
