--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -5,8 +5,12 @@
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
+{% block page_header %}
+<div class="header-container"></div>
+{% endblock %}
+
 {% block inner_content %}
-<div class="wrapper">
+<div class="container wrapper">
 
     <h2 class="my-5">{% trans "Password Reset" %}</h2>
     {% if user.is_authenticated %}
