--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -4,14 +4,18 @@
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
+{% block page_header %}
+<div class="header-container"></div>
+{% endblock %}
+
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Set Password" %}</h2>
-    <hr>
+<div class="wrapper container">
+    <h2 class="my-5">{% trans "Set Password" %}</h2>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
         {{ form|crispy }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        <input type="submit" name="action" value="{% trans 'Set Password' %}" />
     </form>
+</div>
 {% endblock %}
