--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -4,10 +4,14 @@
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
-{% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign Up Closed" %}</h2>
-<hr>
+{% block page_header %}
+<div class="header-container"></div>
+{% endblock %}
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+{% block inner_content %}
+<div class="container wrapper">
+    <h2 class="logo-font mb-4">{% trans "Sign Up Closed" %}</h2>
+
+    <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+</div>
 {% endblock %}
