Renders thumbnails for admins rather than full-sized images

--- a/album/templates/includes/album_admin.html
+++ b/album/templates/includes/album_admin.html
@@ -12,7 +12,7 @@
         </div>
         {% for media in album %}
         {% if media.image %}
-        <div class="col-2 px-1"><img src="{{ media.image.url }}" width="50" height="50" alt="thumbnail"></div>
+        <div class="col-2 px-1"><img src="{{ media.thumbnail.url }}" width="50" height="50" alt="thumbnail"></div>
         {% else %}
         <div class="col-2 px-1"><img src="{{ MEDIA_URL }}video.png" width="50" height="50" alt="thumbnail"></div>
         {% endif %}
